contact and projects modified

--- a/css/style.css
+++ b/css/style.css
@@ -1329,24 +1329,14 @@ overflow: hidden;
     color: #017ba9;
     text-transform: capitalize;
 
-} 
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+}     
     
 }
+
+.color-white{
+    color: #000
+}
+
 
 
 
